// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ActionList should render 5 items 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        cardPadding={true}
        style={
          Object {
            "paddingHorizontal": 24,
            "paddingVertical": 24,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 1
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 2
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 3
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 4
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`ActionList should render a loading state 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    isLoading={true}
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        cardPadding={true}
        style={
          Object {
            "paddingHorizontal": 24,
            "paddingVertical": 24,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 14,
                  "marginVertical": 3.5,
                  "width": "60%",
                }
              }
            />
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 12,
                  "marginVertical": 3,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 14,
                  "marginVertical": 3.5,
                  "width": "60%",
                }
              }
            />
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 12,
                  "marginVertical": 3,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 14,
                  "marginVertical": 3.5,
                  "width": "60%",
                }
              }
            />
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 12,
                  "marginVertical": 3,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 14,
                  "marginVertical": 3.5,
                  "width": "60%",
                }
              }
            />
            <View
              style={
                Object {
                  "alignSelf": "stretch",
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 12,
                  "marginVertical": 3,
                  "width": "100%",
                }
              }
            />
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`ActionList should render items as "touchable via onPressActionItem 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        cardPadding={true}
        style={
          Object {
            "paddingHorizontal": 24,
            "paddingVertical": 24,
          }
        }
      >
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingBottom": 8,
              }
            }
          >
            <Image
              fadeDuration={250}
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "cache": "force-cache",
                    "uri": "",
                    "url": "",
                  },
                ]
              }
              style={
                Object {
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 64,
                  "marginRight": 16,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  }
                }
              >
                Hello 1
              </Text>
              <Text
                bold={false}
                ellipsizeMode="tail"
                italic={false}
                numberOfLines={2}
                style={
                  Object {
                    "color": "#A5A5A5",
                    "fontFamily": "InterUI-Regular",
                    "fontSize": 12,
                    "lineHeight": 18,
                  }
                }
              >
                Boom
              </Text>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingBottom": 8,
              }
            }
          >
            <Image
              fadeDuration={250}
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "cache": "force-cache",
                    "uri": "",
                    "url": "",
                  },
                ]
              }
              style={
                Object {
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 64,
                  "marginRight": 16,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  }
                }
              >
                Hello 2
              </Text>
              <Text
                bold={false}
                ellipsizeMode="tail"
                italic={false}
                numberOfLines={2}
                style={
                  Object {
                    "color": "#A5A5A5",
                    "fontFamily": "InterUI-Regular",
                    "fontSize": 12,
                    "lineHeight": 18,
                  }
                }
              >
                Boom
              </Text>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingBottom": 8,
              }
            }
          >
            <Image
              fadeDuration={250}
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "cache": "force-cache",
                    "uri": "",
                    "url": "",
                  },
                ]
              }
              style={
                Object {
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 64,
                  "marginRight": 16,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  }
                }
              >
                Hello 3
              </Text>
              <Text
                bold={false}
                ellipsizeMode="tail"
                italic={false}
                numberOfLines={2}
                style={
                  Object {
                    "color": "#A5A5A5",
                    "fontFamily": "InterUI-Regular",
                    "fontSize": 12,
                    "lineHeight": 18,
                  }
                }
              >
                Boom
              </Text>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingBottom": 8,
              }
            }
          >
            <Image
              fadeDuration={250}
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "cache": "force-cache",
                    "uri": "",
                    "url": "",
                  },
                ]
              }
              style={
                Object {
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 64,
                  "marginRight": 16,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            >
              <Text
                numberOfLines={1}
                style={
                  Object {
                    "color": "#303030",
                    "fontFamily": "InterUI-Medium",
                    "fontSize": 14,
                    "lineHeight": 21,
                  }
                }
              >
                Hello 4
              </Text>
              <Text
                bold={false}
                ellipsizeMode="tail"
                italic={false}
                numberOfLines={2}
                style={
                  Object {
                    "color": "#A5A5A5",
                    "fontFamily": "InterUI-Regular",
                    "fontSize": 12,
                    "lineHeight": 18,
                  }
                }
              >
                Boom
              </Text>
            </View>
          </View>
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "transform": Array [
                Object {
                  "scale": 1,
                },
              ],
            }
          }
        >
          <View
            style={
              Object {
                "flexDirection": "row",
                "justifyContent": "flex-start",
                "paddingBottom": 8,
              }
            }
          >
            <Image
              fadeDuration={250}
              onLoad={[Function]}
              source={
                Array [
                  Object {
                    "cache": "force-cache",
                    "uri": "",
                    "url": "",
                  },
                ]
              }
              style={
                Object {
                  "backgroundColor": "#A5A5A5",
                  "borderRadius": 16,
                  "height": 64,
                  "marginRight": 16,
                  "width": 64,
                }
              }
            />
            <View
              style={
                Object {
                  "flex": 1,
                  "justifyContent": "center",
                }
              }
            />
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`ActionList should render with a header 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <Text
        ellipsizeMode="tail"
        numberOfLines={3}
        style={
          Object {
            "color": "#303030",
            "fontFamily": "InterUI-Black",
            "fontSize": 24,
            "lineHeight": 27.6,
          }
        }
      >
        Custom Header Element
      </Text>
      <View
        cardPadding={true}
        style={
          Object {
            "paddingHorizontal": 24,
            "paddingVertical": 24,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 1
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 2
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 3
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 4
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`ActionList should render with events 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        cardPadding={true}
        style={
          Object {
            "paddingHorizontal": 24,
            "paddingVertical": 24,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 1
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 2
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 3
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 4
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            bordered={true}
            disabled={false}
            pill={false}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#A5A5A5",
                "borderRadius": 16,
                "borderWidth": 2,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "marginTop": 8,
                "opacity": 1,
                "overflow": "hidden",
                "paddingHorizontal": 16,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              Press Me!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`ActionList should render with onPressActionListButton 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    style={
      Object {
        "backgroundColor": "#FFFFFF",
        "borderRadius": 16,
        "marginHorizontal": 16,
        "marginVertical": 12,
        "shadowColor": "rgba(0, 0, 0, 0.09999999999999998)",
        "shadowOffset": Object {
          "height": 2,
          "width": 0,
        },
        "shadowOpacity": 1,
        "shadowRadius": 8,
      }
    }
  >
    <View
      style={
        Object {
          "borderRadius": 16,
          "overflow": "hidden",
        }
      }
    >
      <View
        cardPadding={true}
        style={
          Object {
            "paddingHorizontal": 24,
            "paddingVertical": 24,
          }
        }
      >
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 1
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 2
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 3
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          >
            <Text
              numberOfLines={1}
              style={
                Object {
                  "color": "#303030",
                  "fontFamily": "InterUI-Medium",
                  "fontSize": 14,
                  "lineHeight": 21,
                }
              }
            >
              Hello 4
            </Text>
            <Text
              bold={false}
              ellipsizeMode="tail"
              italic={false}
              numberOfLines={2}
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Regular",
                  "fontSize": 12,
                  "lineHeight": 18,
                }
              }
            >
              Boom
            </Text>
          </View>
        </View>
        <View
          style={
            Object {
              "flexDirection": "row",
              "justifyContent": "flex-start",
              "paddingBottom": 8,
            }
          }
        >
          <Image
            fadeDuration={250}
            onLoad={[Function]}
            source={
              Array [
                Object {
                  "cache": "force-cache",
                  "uri": "",
                  "url": "",
                },
              ]
            }
            style={
              Object {
                "backgroundColor": "#A5A5A5",
                "borderRadius": 16,
                "height": 64,
                "marginRight": 16,
                "width": 64,
              }
            }
          />
          <View
            style={
              Object {
                "flex": 1,
                "justifyContent": "center",
              }
            }
          />
        </View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
          style={
            Object {
              "opacity": 1,
            }
          }
        >
          <View
            bordered={true}
            disabled={false}
            pill={false}
            style={
              Object {
                "alignItems": "center",
                "backgroundColor": "transparent",
                "borderColor": "#A5A5A5",
                "borderRadius": 16,
                "borderWidth": 2,
                "flexDirection": "row",
                "height": 48,
                "justifyContent": "center",
                "marginTop": 8,
                "opacity": 1,
                "overflow": "hidden",
                "paddingHorizontal": 16,
                "width": "100%",
              }
            }
          >
            <Text
              style={
                Object {
                  "color": "#A5A5A5",
                  "fontFamily": "InterUI-Bold",
                  "fontSize": 16,
                  "lineHeight": 24,
                }
              }
            >
              Press Me!
            </Text>
          </View>
        </View>
      </View>
    </View>
  </View>,
]
`;

exports[`ActionList should render without a "card border" 1`] = `
Array [
  <View
    onLayout={[Function]}
    pointerEvents="box-none"
    style={
      Array [
        Object {
          "bottom": 0,
          "left": 0,
          "overflow": "hidden",
          "position": "absolute",
          "right": 0,
          "top": 0,
        },
        Object {},
      ]
    }
  />,
  <View
    cardPadding={false}
    style={
      Object {
        "paddingHorizontal": 16,
        "paddingVertical": 16,
      }
    }
  >
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
              "url": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Hello 1
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          Boom
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
              "url": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Hello 2
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          Boom
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
              "url": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Hello 3
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          Boom
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
              "url": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      >
        <Text
          numberOfLines={1}
          style={
            Object {
              "color": "#303030",
              "fontFamily": "InterUI-Medium",
              "fontSize": 14,
              "lineHeight": 21,
            }
          }
        >
          Hello 4
        </Text>
        <Text
          bold={false}
          ellipsizeMode="tail"
          italic={false}
          numberOfLines={2}
          style={
            Object {
              "color": "#A5A5A5",
              "fontFamily": "InterUI-Regular",
              "fontSize": 12,
              "lineHeight": 18,
            }
          }
        >
          Boom
        </Text>
      </View>
    </View>
    <View
      style={
        Object {
          "flexDirection": "row",
          "justifyContent": "flex-start",
          "paddingBottom": 8,
        }
      }
    >
      <Image
        fadeDuration={250}
        onLoad={[Function]}
        source={
          Array [
            Object {
              "cache": "force-cache",
              "uri": "",
              "url": "",
            },
          ]
        }
        style={
          Object {
            "backgroundColor": "#A5A5A5",
            "borderRadius": 16,
            "height": 64,
            "marginRight": 16,
            "width": 64,
          }
        }
      />
      <View
        style={
          Object {
            "flex": 1,
            "justifyContent": "center",
          }
        }
      />
    </View>
  </View>,
]
`;
